--- a/new-donor.html
+++ b/new-donor.html
@@ -100,7 +100,7 @@
 
   <script>
     let generatedOtp = "";
-    const webAppURL = "YOUR_DEPLOYED_WEBAPP_URL_HERE";
+    const webAppURL = "https://script.google.com/macros/s/AKfycbwN9-g1EJyJ4tswyWg0jevkKT4CqKh1ZKQmetIQ4hFoqqlONIcESzlOo_QlsyNNAgLC/exec";
 
     function sendOTP() {
       const email = document.getElementById("email").value;
