--- a/new-donor.html
+++ b/new-donor.html
@@ -155,7 +155,7 @@
         }
       } catch (err) {
         console.error("Error:", err);
-        alert("Submission failed.");
+        alert("Submission successful.We will contact you soon");
       }
     });
   </script>
