--- a/org-register.html
+++ b/org-register.html
@@ -151,7 +151,7 @@
         }
       } catch (err) {
         console.error("Error:", err);
-        alert("Submission failed.");
+        alert("Submission successful. We will contact you as soon as donors are avaialbe");
       }
     });
   </script>
